# luke

./: .env.example  .gitignore  CLAUDE.md  README.md  com.luke.deadman.plist  com.luke.plist  com.luke.watchdog.plist  deadman.sh  deploy.sh  fpl-75-research.md  guardian.sh  pyproject.toml  pyrightconfig.json  watchdog.sh
.claude/: settings.json
.claude/skills/customize/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/upgrade/: SKILL.md
docs/: README.md  agent.md  autonomous-behaviors.md  concurrency.md  cursor-model.md  memory.md  opinionated-minimalism.md  persona.md  security.md  step4-trust-calibration-design.md
src/luke/: __main__.py  agent.py  app.py  attention.py  behaviors.py  bus.py  config.py  context.py  critic.py  db.py  dbwriter.py  media.py  memory.py  planner.py  scheduler.py
src/luke/templates/: LUKE.md  context.yaml.example
tests/: conftest.py  test_agent.py  test_app.py  test_attention.py  test_behavioral.py  test_behaviors.py  test_bus.py  test_config.py  test_context.py  test_critic.py  test_db.py  test_db_memory.py  test_dbwriter.py  test_deep_work_quality.py  test_events.py  test_media.py  test_persistent_reasoning.py  test_planner.py  test_scheduler.py
workspace/research/: context-engineering-research.md  context-engineering-spec.md  memory-consolidation-spec.md  phase2-roadmap.md  q2-2026-research-plan.md  self-improvement-spec.md  self-improving-architectures-survey.md
